site/public/design/layout.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans);
html,body{
	background:#fff;
	font-family: 'Open Sans', sans-serif;
	padding:0;
	margin:0;
	position: relative;
	height:100%;
	width:100%;
	background:#55c989;
}

div.uploadButton{
	background:#fff;
	width:120px;
	height:40px;
	cursor: pointer;
	line-height: 40px;
	color:#55c989;
	margin:0px auto;
	margin-top:50px;
}
div.uploadButton span{
	cursor: pointer;
}
section.upload{
	background:#55c989;
	color:#fff;
	text-align: center;
	min-height: 500px;
	direction: block;
}
section.upload img{
	margin:0px auto;
	display: block;
	height:100%;
	width:100%;
	opacity: 1;
	position: absolute;
	top:0px;
	left:0px;
}
section.upload img.preview2.empty{
	opacity:0;
}
section.upload img.preview2{
	z-index:10;
	opacity:1;
}
div.img_container{
	position: relative;
	margin:0px auto;
}
div.img_container.empty{
	width:0px;
	height:0px;
}
div.loading.hide{
	opacity:0;
}
div.loading{
	width:100%;
	height:100%;
	background:#000;
	opacity:0.6;
	position: absolute;
	top:0px;
	left:0px;
	z-index:100;
}
section.upload span.icon-face-moustache{
	width:50px;
	height:50px;
	line-height: 50px;
	font-size:50px;
	display: block;
	position: absolute;
	left:50%;
	margin-left:-25px;
	top:50%;
	margin-top:-25px;
	text-align: center;
	-webkit-transition-property: -webkit-transform;
	-moz-transition-property: -moz-transform;
	-o-transition-property: -o-transform;
	transition-property: transform;
    -webkit-animation:spin 1s linear infinite;
    -moz-animation:spin 1s linear infinite;
    animation:spin 1s linear infinite;
}
*{
	-webkit-transition: all 0.2s ease;
	-moz-transition: all 0.2s ease;
	-o-transition: all 0.2s ease;
	transition: all 0.2s ease;
}


@font-face {
    font-family: 'icomoon';
    src:    url('fonts/icomoon.eot?6w1qg5');
    src:    url('fonts/icomoon.eot?6w1qg5#iefix') format('embedded-opentype'),
        url('fonts/icomoon.ttf?6w1qg5') format('truetype'),
        url('fonts/icomoon.woff?6w1qg5') format('woff'),
        url('fonts/icomoon.svg?6w1qg5#icomoon') format('svg');
    font-weight: normal;
    font-style: normal;
}

[class^="icon-"], [class*=" icon-"] {
    /* use !important to prevent issues with browser extensions that change fonts */
    font-family: 'icomoon' !important;
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    line-height: 1;

    /* Better Font Rendering =========== */
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.icon-face-moustache:before {
    content: "\e902";
}
.icon-cloud-upload2:before {
    content: "\e901";
}
.icon-cloud-upload:before {
    content: "\e900";
}


@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }



span.icon-cloud-upload2{
	font-size:30px;
	width:40px;
	height:40px;
	line-height: 40px;
	vertical-align: top;
}

div.logo{
	color:#fff;
	text-align: center;
}
div.logo>span.title{
	font-size:50px;
	vertical-align: middle;
}
div.logo>span.blurb{
	display: block;
	font-size:20px;
	position: relative;
	top:-20px;
}
span.icon-face-moustache{
	font-size:90px;
	vertical-align: middle;
}

